<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_text">Поиск</string>
    <string name="media_text">Медиатека</string>
    <string name="setting_text">Настройки</string>
    <string name="back_text">Назад</string>
    <string name="night_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="share_text">Поделиться</string>
    <string name="support">Написать в поддержку</string>
    <string name="support_text">Поддержка</string>
    <string name="user_docs">Пользовательское соглашение</string>
    <string name="oferta">Соглашение</string>
    <string name="shareMessage">Лучший курс по Android Разработке: https://practicum.yandex.ru/android-developer/</string>
    <string name="receiver">mailto:zuevavero@yandex.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_address">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear_text">Очистить поле</string>
    <string name="track_name">Имя трека</string>
    <string name="user_test">Очень длинная строка, которая должна прерываться когда она достигнет края</string>
    <string name="none_search">Ничего не нашлось</string>
    <string name="none_internet">Проблемы со свзязью</string>
    <string name="additional_status">Загрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="update_text">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="time_track">Длительность</string>
    <string name="album_track">Альбом</string>
    <string name="year_track">Год</string>
    <string name="genre_track">Жанр</string>
    <string name="country_track">Страна</string>
    <string name="test">Тест</string>
    <string name="something_went_wrong">Произошла ошибка</string>
    <string name="null_time">00:00</string>
    <string name="media">Медиатека</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlist_tracks">Плейлисты</string>
    <string name="desc_switch">Переключение темы</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_text">Создать</string>
    <string name="end_create_playlist">Завершить создание плейлиста?</string>
    <string name="message_dialog">Все несохраненные данные будут потеряны</string>
    <string name="cancel_button">Отменить</string>
    <string name="finish_button">Завершить</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="playlist_item">Плейлист</string>
    <string name="remove_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="no_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_text">Удалить плейлист</string>
    <string name="edit_playlist_text">Редактировать информацию</string>
    <string name="want_delete_playlist">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit_title">Редактировать информацию</string>
    <string name="save_button">Сохранить</string>
    <string name="null_time_duration">0 минут</string>
    <string name="empty_track">В данном плейлисте нет треков, которыми можно поделиться</string>
</resources>
