<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:paddingTop="@dimen/padding_top"
    android:paddingBottom="@dimen/padding_bottom"
    android:paddingLeft="@dimen/base"
    android:paddingRight="@dimen/base"
    tools:context=".MainActivity"
    tools:ignore="Overdraw">

    <TextView android:text="@string/app_name"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/logo_bottom"
        android:textColor="@color/white"
        android:textSize="@dimen/base_text"
        android:fontFamily="@font/yandex_medium"
        />

    <Button android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search_text"
        android:textColor="@color/black"
        android:textSize="@dimen/base_text"
        android:fontFamily="@font/yandex_medium"
        android:layout_gravity="center"
        app:cornerRadius="@dimen/base"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/ten_padding"
        app:iconTint="@color/black"
        tools:ignore="VisualLintButtonSize" />

    <Button android:id="@+id/media_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media_text"
        android:textColor="@color/black"
        android:textSize="@dimen/base_text"
        android:fontFamily="@font/yandex_medium"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/base"
        app:cornerRadius="@dimen/base"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/ten_padding"
        app:iconTint="@color/black"
        tools:ignore="VisualLintButtonSize" />

    <Button android:id="@+id/setting_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/setting_text"
        android:textColor="@color/black"
        android:textSize="@dimen/base_text"
        android:fontFamily="@font/yandex_medium"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/base"
        app:cornerRadius="@dimen/base"
        app:icon="@drawable/setting"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/ten_padding"
        app:iconTint="@color/black"
        tools:ignore="VisualLintButtonSize" />



</LinearLayout>