<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="@dimen/zero"
    style="@style/FrameSetting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:theme="@style/Theme.CardContainer">

    <ImageView android:id="@+id/poster"
        android:layout_height="45dp"
        android:layout_width="45dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/track_name"
        android:layout_gravity="center_vertical"
        />


        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/min_padding"
            android:paddingVertical="@dimen/twelve_padding"
            android:orientation="vertical"
            tools:ignore="InefficientWeight">

        <TextView android:id="@+id/track_name"
            tools:text="@string/user_test"
            style="@style/TextSetting"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/one"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView android:id="@+id/artist_name"
                    tools:text="@string/user_test"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    style="@style/TrackShortInfoText"
                    tools:ignore="TextContrastCheck" />

                <ImageView
                    style="@style/PointIcon"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView android:id="@+id/track_time"
                    tools:text="@string/oferta"
                    style="@style/TrackShortInfoText"
                    tools:ignore="TextContrastCheck"
                    />
            </LinearLayout>

            </LinearLayout>


        <ImageButton
            style="@style/IconSetting"
            android:src="@drawable/send"
            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

</androidx.cardview.widget.CardView>