<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
style="@style/BaseLinear"
android:paddingTop="@dimen/zero"
android:paddingLeft="@dimen/zero"
android:paddingRight="@dimen/zero"
tools:context=".SearchActivity"
tools:ignore="Overdraw">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_stroke"
    android:background="@android:color/transparent">

    <ImageButton android:id="@+id/back_button"
        android:src="@drawable/back"
        android:contentDescription="@string/back_text"
        style="@style/IconSetting"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/base"
        android:backgroundTint="@android:color/transparent"
        android:theme="@style/Theme.TextPlaylistMaker"
        />

    <TextView android:text="@string/search_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/base"
        style="@style/BaseTitle" />

</LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginHorizontal="@dimen/base"
        android:layout_marginVertical="@dimen/min_padding"
        style="@style/InputContainer"
        >

        <EditText
            android:id="@+id/search_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autofillHints="@string/search_text"
            android:drawablePadding="@dimen/min_padding"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_text"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/twelve_padding"
            android:paddingEnd="@dimen/twelve_padding"
            android:textSize="@dimen/setting_text"
            android:background="@android:color/transparent"
            style="@style/InputSearch"
            tools:ignore="DuplicateSpeakableTextCheck,RelativeOverlap,VisualLintTextFieldSize,TextContrastCheck" />

    <ImageButton android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:src="@drawable/clear"
        android:layout_margin="@dimen/min_padding"
        android:contentDescription="@string/clear_text"
        android:visibility="gone"
        />
</FrameLayout>
</LinearLayout>




