<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/media_player"
    tools:context=".player.ui.PlayerActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_imageline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_imageline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93"/>


    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="@dimen/input_height"
        android:layout_height="@dimen/input_height"
        android:background="@null"
        android:contentDescription="@string/back_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        android:theme="@style/Theme.TextPlaylistMaker"
        tools:ignore="ImageContrastCheck" />

    <ImageView android:id="@+id/poster"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_imageline"
        app:layout_constraintStart_toStartOf="@+id/left_imageline"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        android:layout_marginTop="@dimen/base"
        android:contentDescription="@string/app_name"
        tools:ignore="VisualLintBounds" />

    <TextView android:id="@+id/title_track"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/zero"
        app:layout_constraintStart_toStartOf="@id/left_imageline"
        app:layout_constraintEnd_toEndOf="@id/right_imageline"
        app:layout_constraintTop_toBottomOf="@id/poster"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="@dimen/two_four"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/base_text"
        android:textColor="@color/secondary"
        android:maxLines="1"
        android:ellipsize="end"
        tools:ignore="VisualLintBounds" />

    <TextView android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_track"
        app:layout_constraintStart_toStartOf="@id/poster"
        android:layout_marginTop="@dimen/min_padding"
        tools:ignore="VisualLintBounds"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/secondary"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_button"/>

    <ImageButton
        android:id="@+id/button_plus"
        android:layout_width="@dimen/header_stroke"
        android:layout_height="@dimen/header_stroke"
        android:background="@null"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="@id/poster"
        app:layout_constraintTop_toTopOf="@+id/button_play"
        app:layout_constraintBottom_toBottomOf="@id/button_play"
        app:srcCompat="@drawable/plus"
        tools:ignore="VisualLintBounds,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/button_play"
        android:layout_width="@dimen/big_button"
        android:layout_height="@dimen/big_button"
        android:background="@null"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_name"
        app:srcCompat="@drawable/play"
        android:layout_marginTop="@dimen/padding_bottom"
        tools:ignore="VisualLintBounds,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/button_heart"
        android:layout_width="@dimen/header_stroke"
        android:layout_height="@dimen/header_stroke"
        android:background="@null"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="@id/poster"
        app:layout_constraintTop_toTopOf="@+id/button_play"
        app:layout_constraintBottom_toBottomOf="@id/button_play"
        app:srcCompat="@drawable/heart"
        tools:ignore="VisualLintBounds,ImageContrastCheck" />

    <TextView android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_play"
        android:textColor="@color/secondary"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_button"
        android:layout_marginTop="@dimen/portion"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/time_track"
        style="@style/ParamName"
        android:layout_marginTop="@dimen/button_height"
        android:text="@string/time_track"
        app:layout_constraintStart_toStartOf="@id/left_guidline"
        app:layout_constraintTop_toBottomOf="@id/timer"
        tools:ignore="TextContrastCheck,VisualLintBounds" />

    <TextView android:id="@+id/time"
        style="@style/ParamValue"
        app:layout_constraintTop_toBottomOf="@id/timer"
        app:layout_constraintEnd_toEndOf="@id/right_guidline"
        android:layout_marginTop="@dimen/button_height"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/album_track"
        android:text="@string/album_track"
        style="@style/ParamName"
        app:layout_constraintStart_toStartOf="@id/left_guidline"
        app:layout_constraintTop_toBottomOf="@id/time_track"
        tools:ignore="TextContrastCheck,VisualLintBounds" />

    <TextView android:id="@+id/album"
        style="@style/ParamValue"
        android:layout_width="@dimen/zero"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintEnd_toEndOf="@id/right_guidline"
        app:layout_constraintStart_toEndOf="@id/album_track"
        android:layout_marginStart="@dimen/base"
        android:textAlignment="viewEnd"
        android:maxLines="1"
        android:ellipsize="end"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/year_track"
        android:text="@string/year_track"
        style="@style/ParamName"
        app:layout_constraintStart_toStartOf="@id/left_guidline"
        app:layout_constraintTop_toBottomOf="@id/album_track"
        tools:ignore="TextContrastCheck,VisualLintBounds" />

    <TextView android:id="@+id/year"
        app:layout_constraintTop_toBottomOf="@id/album"
        app:layout_constraintEnd_toEndOf="@id/right_guidline"
        style="@style/ParamValue"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/genre_track"
        android:text="@string/genre_track"
        style="@style/ParamName"
        app:layout_constraintStart_toStartOf="@id/left_guidline"
        app:layout_constraintTop_toBottomOf="@id/year_track"
        tools:ignore="TextContrastCheck,VisualLintBounds" />

    <TextView android:id="@+id/genre"
        app:layout_constraintTop_toBottomOf="@id/year"
        app:layout_constraintEnd_toEndOf="@id/right_guidline"
        style="@style/ParamValue"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/country_track"
        android:text="@string/country_track"
        style="@style/ParamName"
        android:paddingBottom="@dimen/base"
        app:layout_constraintStart_toStartOf="@id/left_guidline"
        app:layout_constraintTop_toBottomOf="@id/genre_track"
        tools:ignore="TextContrastCheck,VisualLintBounds" />

    <TextView android:id="@+id/country"
        style="@style/ParamValue"
        android:paddingBottom="@dimen/base"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintEnd_toEndOf="@id/right_guidline"
        tools:ignore="VisualLintBounds" />


</androidx.constraintlayout.widget.ConstraintLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bottom_sheet_bg"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/bottom_sheet_height"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/add_in_playlist"
           style="@style/BaseTitle"
           android:layout_marginTop="@dimen/padding_bottom"
           android:gravity="center_horizontal"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/two_four"
            android:backgroundTint="@color/secondary"
            android:paddingHorizontal="@dimen/base"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            android:textColor="@color/new_color"
            android:layout_marginBottom="@dimen/new_padding_bottom"
            app:cornerRadius="@dimen/header_stroke"
            tools:ignore="VisualLintOverlap" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/min_padding"
            />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>